--- a/website.html
+++ b/website.html
@@ -2,11 +2,6 @@
     
     <title>document</title>
     <link rel="stylesheet" href="website.css">
-    <style>
-        label{
-
-        }
-    </style>
 </head>
 <body>
     <header id="headerid">
@@ -15,6 +10,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quia veritatis pariatur voluptatem accusantium aut, quisquam illum hic autem nostrum vel esse eligendi necessitatibus repudiandae alias. Atque nisi quibusdam debitis!</p> 
     <a class="btn" href="section-c">readmore</a>   
     </header>
+    
     <main>
         <section id="section-a">
         <div class="content-wrap">
@@ -69,7 +65,14 @@
         </ul>
         </section>
 
-        <section></section>
+        <section id="section-c">
+            <div class="content-wrap">
+                <h2 class="content-title">
+                    we handle all of your digital needs
+                </h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quos, temporibus eveniet perferendis accusamus culpa quod deleniti quis fugit! Excepturi adipisci dignissimos dolor qui fugit labore ullam et voluptatem eligendi!</p>
+            </div>
+        </section>
         <section></section>
     </main>
     <footer></footer>
