--- a/grid1.html
+++ b/grid1.html
@@ -1,5 +1,19 @@
 <head>
     <style>
+        .wrapper1{
+            display: grid;
+            gap:1px;
+            height:40px;
+            background:pink;
+            align-items: center;
+            grid-template-columns: 1em;
+            grid-template-rows: 1em;
+            grid-template-areas: 'a b c'
+                                'd e f';
+        }
+        .wrapper1 div{
+            background:yellow;
+        }
         .contanier{
             display: grid;
             grid-gap: 20px;
@@ -44,5 +58,12 @@
         <div class="item5">item5</div>
         <div class="item5">item6</div>
     </div>
-    <div></div>
+    <div class="wrapper1">
+        <div class="a">item1</div>
+        <div class="b">item2</div>
+        <div class="c">item3</div>
+        <div class="d">item4</div>
+        <div class="e">item5</div>
+        <div class="f">item6</div>
+    </div>
 </body>
